--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="stylesheets/app.css">
     <title>escape game cité du jeu - index</title>
 </head>
 <body>
     <main role="main">
         <div class="container">
-
             <div class="index">
-                <img src="image/vector/cloud.svg" alt="nuages">
-                <div class="row justify-content-center">
-                    <div class="col-8">
+                <img class="logo-crous" src="image/logo-crous.png" alt="logo crous">
+                <img class="cloud-1" src="image/vector/cloud.svg" alt="nuages">
+                <img class="cloud-2" src="image/vector/cloud.svg" alt="nuages">
+                <div class="row justify-content-center align-center">
+                    <div class="col-7">
                         <h1>
                             Bienvenue sur l’énigme de la cité internationale des jeux, résolvez les enigmes et gagnez une récompense !
                         </h1>
+                        <a class="btn btn-red" href="/etape1.html">Commencer </a>
                     </div>
                 </div>
             </div>
