--- a/etape1.html
+++ b/etape1.html
@@ -26,7 +26,7 @@
                     <div class="col-4">
                         <div class="questions row collumn">
                             <div class="question">
-                                <h2>Rentrez le code à 12 charactères.<br>
+                                <h2>Rentrez le code à 12 caractères.<br>
                                     <span>Indice : 6 lettres et 6 chiffres se baladent sur l'affiche, le tout dans l'ordre...</span>
                                 </h2>
                                 <div class="input">
