--- a/etape1.html
+++ b/etape1.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">copyrigth la cité du jeu©</p>
+        <p class="copyright">copyrigth la cité internationale du jeu©</p>
     </main>
     <script src="js/script.js"></script>
     <script src="js/drag.js"></script>
