--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">copyrigth la cité du jeu©</p>
+        <p class="copyright">copyrigth la cité internationale du jeu©</p>
     </main>
 </body>
 </html>
