--- a/maze.html
+++ b/maze.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <p class="copyright">copyrigth la cité du jeu©</p>
+            <p class="copyright">copyrigth la cité internationale du jeu©</p>
         </main>
         <script src="js/maze-builder.js"></script>
         <script src="js/fancy-maze-builder.js"></script>
