--- a/text.html
+++ b/text.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">copyrigth la cité du jeu©</p>
+        <p class="copyright">copyrigth la cité internationale du jeu©</p>
     </main>
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
